# iron-counsel

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  bot.py  config.py  embeddings.py  firestore_client.py  main.py  rag.py
scripts/: ingest.py
terraform/: .gitignore  artifact_registry.tf  backend.tf  cloud_run.tf  firestore.tf  github.tf  iam.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf  workload_identity.tf
tests/: conftest.py  test_bot.py  test_main.py  test_rag.py
